@@ -5,6 +5,10 @@ Last modified: 2014-04-13 12:04:58 tkych
 ======================================================================
 
 Version dev, on github.com/lisp-maintainers/quicksearch
+
+2024-07-29
+Changed: the Drakma library is replaced by Dexador for HTTP requests.
+
 2020-03-30
 quicksearch: key arguments that start with a '?' are marked deprecated.
              Using them will throw an error with an explanation.
